// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart 1`] = `
<VictoryContainer
  className="VictoryContainer"
  events={Object {}}
  height={400}
  id="pie-parent-parent"
  index="parent"
  key="pie-parent-parent"
  pathFunction={[Function]}
  portalComponent={<Portal />}
  portalZIndex={99}
  responsive={true}
  slices={
    Array [
      Object {
        "data": Object {
          "_x": 1,
          "_y": 1,
          "eventKey": 0,
          "x": "A",
          "xName": "A",
          "y": 1,
        },
        "endAngle": 0.6981317007977318,
        "index": 0,
        "padAngle": 0,
        "startAngle": 0,
        "value": 1,
      },
      Object {
        "data": Object {
          "_x": 2,
          "_y": 2,
          "eventKey": 1,
          "x": "B",
          "xName": "B",
          "y": 2,
        },
        "endAngle": 2.0943951023931953,
        "index": 1,
        "padAngle": 0,
        "startAngle": 0.6981317007977318,
        "value": 2,
      },
      Object {
        "data": Object {
          "_x": 3,
          "_y": 3,
          "eventKey": 2,
          "x": "C",
          "xName": "C",
          "y": 3,
        },
        "endAngle": 4.1887902047863905,
        "index": 2,
        "padAngle": 0,
        "startAngle": 2.0943951023931953,
        "value": 3,
      },
      Object {
        "data": Object {
          "_x": 4,
          "_y": 1,
          "eventKey": 3,
          "x": "D",
          "xName": "D",
          "y": 1,
        },
        "endAngle": 4.886921905584122,
        "index": 3,
        "padAngle": 0,
        "startAngle": 4.1887902047863905,
        "value": 1,
      },
      Object {
        "data": Object {
          "_x": 5,
          "_y": 2,
          "eventKey": 4,
          "x": "E",
          "xName": "E",
          "y": 2,
        },
        "endAngle": 6.283185307179586,
        "index": 4,
        "padAngle": 0,
        "startAngle": 4.886921905584122,
        "value": 2,
      },
    ]
  }
  standalone={true}
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
  width={400}
>
  <g>
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 1,
          "_y": 1,
          "eventKey": 0,
          "x": "A",
          "xName": "A",
          "y": 1,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-0"
      index={0}
      key="pie-data-0"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          "endAngle": 0.6981317007977318,
          "index": 0,
          "padAngle": 0,
          "startAngle": 0,
          "value": 1,
        }
      }
      style={
        Object {
          "fill": "#007bba",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 2,
          "_y": 2,
          "eventKey": 1,
          "x": "B",
          "xName": "B",
          "y": 2,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-1"
      index={1}
      key="pie-data-1"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          "endAngle": 2.0943951023931953,
          "index": 1,
          "padAngle": 0,
          "startAngle": 0.6981317007977318,
          "value": 2,
        }
      }
      style={
        Object {
          "fill": "#bee1f4",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 3,
          "_y": 3,
          "eventKey": 2,
          "x": "C",
          "xName": "C",
          "y": 3,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-2"
      index={2}
      key="pie-data-2"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          "endAngle": 4.1887902047863905,
          "index": 2,
          "padAngle": 0,
          "startAngle": 2.0943951023931953,
          "value": 3,
        }
      }
      style={
        Object {
          "fill": "#39a5dc",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 4,
          "_y": 1,
          "eventKey": 3,
          "x": "D",
          "xName": "D",
          "y": 1,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-3"
      index={3}
      key="pie-data-3"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          "endAngle": 4.886921905584122,
          "index": 3,
          "padAngle": 0,
          "startAngle": 4.1887902047863905,
          "value": 1,
        }
      }
      style={
        Object {
          "fill": "#0066ff",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 5,
          "_y": 2,
          "eventKey": 4,
          "x": "E",
          "xName": "E",
          "y": 2,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-4"
      index={4}
      key="pie-data-4"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
          "endAngle": 6.283185307179586,
          "index": 4,
          "padAngle": 0,
          "startAngle": 4.886921905584122,
          "value": 2,
        }
      }
      style={
        Object {
          "fill": "#007bba",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 1,
          "_y": 1,
          "eventKey": 0,
          "x": "A",
          "xName": "A",
          "y": 1,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-0"
      index={0}
      key="pie-labels-0"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="top"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          "endAngle": 0.6981317007977318,
          "index": 0,
          "padAngle": 0,
          "startAngle": 0,
          "value": 1,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="A"
      textAnchor="middle"
      verticalAnchor="end"
      x={264}
      y={23}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 2,
          "_y": 2,
          "eventKey": 1,
          "x": "B",
          "xName": "B",
          "y": 2,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-1"
      index={1}
      key="pie-labels-1"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="right"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          "endAngle": 2.0943951023931953,
          "index": 1,
          "padAngle": 0,
          "startAngle": 0.6981317007977318,
          "value": 2,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="B"
      textAnchor="start"
      verticalAnchor="middle"
      x={385}
      y={167}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 3,
          "_y": 3,
          "eventKey": 2,
          "x": "C",
          "xName": "C",
          "y": 3,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-2"
      index={2}
      key="pie-labels-2"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="bottom"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          "endAngle": 4.1887902047863905,
          "index": 2,
          "padAngle": 0,
          "startAngle": 2.0943951023931953,
          "value": 3,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="C"
      textAnchor="middle"
      verticalAnchor="start"
      x={200}
      y={388}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 4,
          "_y": 1,
          "eventKey": 3,
          "x": "D",
          "xName": "D",
          "y": 1,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-3"
      index={3}
      key="pie-labels-3"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="left"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          "endAngle": 4.886921905584122,
          "index": 3,
          "padAngle": 0,
          "startAngle": 4.1887902047863905,
          "value": 1,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="D"
      textAnchor="end"
      verticalAnchor="middle"
      x={15}
      y={233}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 5,
          "_y": 2,
          "eventKey": 4,
          "x": "E",
          "xName": "E",
          "y": 2,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-4"
      index={4}
      key="pie-labels-4"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="top"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
          "endAngle": 6.283185307179586,
          "index": 4,
          "padAngle": 0,
          "startAngle": 4.886921905584122,
          "value": 2,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="E"
      textAnchor="middle"
      verticalAnchor="end"
      x={79}
      y={56}
    />
  </g>
</VictoryContainer>
`;

exports[`Chart 2`] = `
<VictoryContainer
  className="VictoryContainer"
  events={Object {}}
  height={400}
  id="pie-parent-parent"
  index="parent"
  key="pie-parent-parent"
  pathFunction={[Function]}
  portalComponent={<Portal />}
  portalZIndex={99}
  responsive={true}
  slices={
    Array [
      Object {
        "data": Object {
          "_x": 1,
          "_y": 1,
          "eventKey": 0,
          "x": "A",
          "xName": "A",
          "y": 1,
        },
        "endAngle": 0.6981317007977318,
        "index": 0,
        "padAngle": 0,
        "startAngle": 0,
        "value": 1,
      },
      Object {
        "data": Object {
          "_x": 2,
          "_y": 2,
          "eventKey": 1,
          "x": "B",
          "xName": "B",
          "y": 2,
        },
        "endAngle": 2.0943951023931953,
        "index": 1,
        "padAngle": 0,
        "startAngle": 0.6981317007977318,
        "value": 2,
      },
      Object {
        "data": Object {
          "_x": 3,
          "_y": 3,
          "eventKey": 2,
          "x": "C",
          "xName": "C",
          "y": 3,
        },
        "endAngle": 4.1887902047863905,
        "index": 2,
        "padAngle": 0,
        "startAngle": 2.0943951023931953,
        "value": 3,
      },
      Object {
        "data": Object {
          "_x": 4,
          "_y": 1,
          "eventKey": 3,
          "x": "D",
          "xName": "D",
          "y": 1,
        },
        "endAngle": 4.886921905584122,
        "index": 3,
        "padAngle": 0,
        "startAngle": 4.1887902047863905,
        "value": 1,
      },
      Object {
        "data": Object {
          "_x": 5,
          "_y": 2,
          "eventKey": 4,
          "x": "E",
          "xName": "E",
          "y": 2,
        },
        "endAngle": 6.283185307179586,
        "index": 4,
        "padAngle": 0,
        "startAngle": 4.886921905584122,
        "value": 2,
      },
    ]
  }
  standalone={true}
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
  width={400}
>
  <g>
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 1,
          "_y": 1,
          "eventKey": 0,
          "x": "A",
          "xName": "A",
          "y": 1,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-0"
      index={0}
      key="pie-data-0"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          "endAngle": 0.6981317007977318,
          "index": 0,
          "padAngle": 0,
          "startAngle": 0,
          "value": 1,
        }
      }
      style={
        Object {
          "fill": "#007bba",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 2,
          "_y": 2,
          "eventKey": 1,
          "x": "B",
          "xName": "B",
          "y": 2,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-1"
      index={1}
      key="pie-data-1"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          "endAngle": 2.0943951023931953,
          "index": 1,
          "padAngle": 0,
          "startAngle": 0.6981317007977318,
          "value": 2,
        }
      }
      style={
        Object {
          "fill": "#bee1f4",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 3,
          "_y": 3,
          "eventKey": 2,
          "x": "C",
          "xName": "C",
          "y": 3,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-2"
      index={2}
      key="pie-data-2"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          "endAngle": 4.1887902047863905,
          "index": 2,
          "padAngle": 0,
          "startAngle": 2.0943951023931953,
          "value": 3,
        }
      }
      style={
        Object {
          "fill": "#39a5dc",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 4,
          "_y": 1,
          "eventKey": 3,
          "x": "D",
          "xName": "D",
          "y": 1,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-3"
      index={3}
      key="pie-data-3"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          "endAngle": 4.886921905584122,
          "index": 3,
          "padAngle": 0,
          "startAngle": 4.1887902047863905,
          "value": 1,
        }
      }
      style={
        Object {
          "fill": "#0066ff",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 5,
          "_y": 2,
          "eventKey": 4,
          "x": "E",
          "xName": "E",
          "y": 2,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-4"
      index={4}
      key="pie-data-4"
      origin={
        Object {
          "x": 200,
          "y": 200,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
          "endAngle": 6.283185307179586,
          "index": 4,
          "padAngle": 0,
          "startAngle": 4.886921905584122,
          "value": 2,
        }
      }
      style={
        Object {
          "fill": "#007bba",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 1,
          "_y": 1,
          "eventKey": 0,
          "x": "A",
          "xName": "A",
          "y": 1,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-0"
      index={0}
      key="pie-labels-0"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="top"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          "endAngle": 0.6981317007977318,
          "index": 0,
          "padAngle": 0,
          "startAngle": 0,
          "value": 1,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="A"
      textAnchor="middle"
      verticalAnchor="end"
      x={264}
      y={23}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 2,
          "_y": 2,
          "eventKey": 1,
          "x": "B",
          "xName": "B",
          "y": 2,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-1"
      index={1}
      key="pie-labels-1"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="right"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          "endAngle": 2.0943951023931953,
          "index": 1,
          "padAngle": 0,
          "startAngle": 0.6981317007977318,
          "value": 2,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="B"
      textAnchor="start"
      verticalAnchor="middle"
      x={385}
      y={167}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 3,
          "_y": 3,
          "eventKey": 2,
          "x": "C",
          "xName": "C",
          "y": 3,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-2"
      index={2}
      key="pie-labels-2"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="bottom"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          "endAngle": 4.1887902047863905,
          "index": 2,
          "padAngle": 0,
          "startAngle": 2.0943951023931953,
          "value": 3,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="C"
      textAnchor="middle"
      verticalAnchor="start"
      x={200}
      y={388}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 4,
          "_y": 1,
          "eventKey": 3,
          "x": "D",
          "xName": "D",
          "y": 1,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-3"
      index={3}
      key="pie-labels-3"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="left"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          "endAngle": 4.886921905584122,
          "index": 3,
          "padAngle": 0,
          "startAngle": 4.1887902047863905,
          "value": 1,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="D"
      textAnchor="end"
      verticalAnchor="middle"
      x={15}
      y={233}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 1,
            "eventKey": 0,
            "x": "A",
            "xName": "A",
            "y": 1,
          },
          Object {
            "_x": 2,
            "_y": 2,
            "eventKey": 1,
            "x": "B",
            "xName": "B",
            "y": 2,
          },
          Object {
            "_x": 3,
            "_y": 3,
            "eventKey": 2,
            "x": "C",
            "xName": "C",
            "y": 3,
          },
          Object {
            "_x": 4,
            "_y": 1,
            "eventKey": 3,
            "x": "D",
            "xName": "D",
            "y": 1,
          },
          Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
        ]
      }
      datum={
        Object {
          "_x": 5,
          "_y": 2,
          "eventKey": 4,
          "x": "E",
          "xName": "E",
          "y": 2,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-4"
      index={4}
      key="pie-labels-4"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="top"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 5,
            "_y": 2,
            "eventKey": 4,
            "x": "E",
            "xName": "E",
            "y": 2,
          },
          "endAngle": 6.283185307179586,
          "index": 4,
          "padAngle": 0,
          "startAngle": 4.886921905584122,
          "value": 2,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="E"
      textAnchor="middle"
      verticalAnchor="end"
      x={79}
      y={56}
    />
  </g>
</VictoryContainer>
`;

exports[`renders component data 1`] = `
<VictoryContainer
  className="VictoryContainer"
  events={Object {}}
  height={200}
  id="pie-parent-parent"
  index="parent"
  key="pie-parent-parent"
  pathFunction={[Function]}
  portalComponent={<Portal />}
  portalZIndex={99}
  responsive={true}
  slices={
    Array [
      Object {
        "data": Object {
          "_x": 1,
          "_y": 35,
          "eventKey": 0,
          "x": "Cats",
          "xName": "Cats",
          "y": 35,
        },
        "endAngle": 2.199114857512855,
        "index": 0,
        "padAngle": 0,
        "startAngle": 0,
        "value": 35,
      },
      Object {
        "data": Object {
          "_x": 2,
          "_y": 55,
          "eventKey": 1,
          "x": "Dogs",
          "xName": "Dogs",
          "y": 55,
        },
        "endAngle": 5.654866776461628,
        "index": 1,
        "padAngle": 0,
        "startAngle": 2.199114857512855,
        "value": 55,
      },
      Object {
        "data": Object {
          "_x": 3,
          "_y": 10,
          "eventKey": 2,
          "x": "Birds",
          "xName": "Birds",
          "y": 10,
        },
        "endAngle": 6.283185307179586,
        "index": 2,
        "padAngle": 0,
        "startAngle": 5.654866776461628,
        "value": 10,
      },
    ]
  }
  standalone={true}
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
  width={200}
>
  <g>
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 35,
            "eventKey": 0,
            "x": "Cats",
            "xName": "Cats",
            "y": 35,
          },
          Object {
            "_x": 2,
            "_y": 55,
            "eventKey": 1,
            "x": "Dogs",
            "xName": "Dogs",
            "y": 55,
          },
          Object {
            "_x": 3,
            "_y": 10,
            "eventKey": 2,
            "x": "Birds",
            "xName": "Birds",
            "y": 10,
          },
        ]
      }
      datum={
        Object {
          "_x": 1,
          "_y": 35,
          "eventKey": 0,
          "x": "Cats",
          "xName": "Cats",
          "y": 35,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-0"
      index={0}
      key="pie-data-0"
      origin={
        Object {
          "x": 100,
          "y": 100,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 1,
            "_y": 35,
            "eventKey": 0,
            "x": "Cats",
            "xName": "Cats",
            "y": 35,
          },
          "endAngle": 2.199114857512855,
          "index": 0,
          "padAngle": 0,
          "startAngle": 0,
          "value": 35,
        }
      }
      style={
        Object {
          "fill": "#007bba",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 35,
            "eventKey": 0,
            "x": "Cats",
            "xName": "Cats",
            "y": 35,
          },
          Object {
            "_x": 2,
            "_y": 55,
            "eventKey": 1,
            "x": "Dogs",
            "xName": "Dogs",
            "y": 55,
          },
          Object {
            "_x": 3,
            "_y": 10,
            "eventKey": 2,
            "x": "Birds",
            "xName": "Birds",
            "y": 10,
          },
        ]
      }
      datum={
        Object {
          "_x": 2,
          "_y": 55,
          "eventKey": 1,
          "x": "Dogs",
          "xName": "Dogs",
          "y": 55,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-1"
      index={1}
      key="pie-data-1"
      origin={
        Object {
          "x": 100,
          "y": 100,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 2,
            "_y": 55,
            "eventKey": 1,
            "x": "Dogs",
            "xName": "Dogs",
            "y": 55,
          },
          "endAngle": 5.654866776461628,
          "index": 1,
          "padAngle": 0,
          "startAngle": 2.199114857512855,
          "value": 55,
        }
      }
      style={
        Object {
          "fill": "#bee1f4",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <Slice
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 35,
            "eventKey": 0,
            "x": "Cats",
            "xName": "Cats",
            "y": 35,
          },
          Object {
            "_x": 2,
            "_y": 55,
            "eventKey": 1,
            "x": "Dogs",
            "xName": "Dogs",
            "y": 55,
          },
          Object {
            "_x": 3,
            "_y": 10,
            "eventKey": 2,
            "x": "Birds",
            "xName": "Birds",
            "y": 10,
          },
        ]
      }
      datum={
        Object {
          "_x": 3,
          "_y": 10,
          "eventKey": 2,
          "x": "Birds",
          "xName": "Birds",
          "y": 10,
        }
      }
      events={
        Object {
          "onMouseOut": [Function],
          "onMouseOver": [Function],
          "onTouchEnd": [Function],
          "onTouchStart": [Function],
        }
      }
      id="pie-data-2"
      index={2}
      key="pie-data-2"
      origin={
        Object {
          "x": 100,
          "y": 100,
        }
      }
      pathComponent={<Path />}
      pathFunction={[Function]}
      slice={
        Object {
          "data": Object {
            "_x": 3,
            "_y": 10,
            "eventKey": 2,
            "x": "Birds",
            "xName": "Birds",
            "y": 10,
          },
          "endAngle": 6.283185307179586,
          "index": 2,
          "padAngle": 0,
          "startAngle": 5.654866776461628,
          "value": 10,
        }
      }
      style={
        Object {
          "fill": "#39a5dc",
          "padding": 8,
          "stroke": "transparent",
          "strokeWidth": 1,
        }
      }
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 35,
            "eventKey": 0,
            "x": "Cats",
            "xName": "Cats",
            "y": 35,
          },
          Object {
            "_x": 2,
            "_y": 55,
            "eventKey": 1,
            "x": "Dogs",
            "xName": "Dogs",
            "y": 55,
          },
          Object {
            "_x": 3,
            "_y": 10,
            "eventKey": 2,
            "x": "Birds",
            "xName": "Birds",
            "y": 10,
          },
        ]
      }
      datum={
        Object {
          "_x": 1,
          "_y": 35,
          "eventKey": 0,
          "x": "Cats",
          "xName": "Cats",
          "y": 35,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-0"
      index={0}
      key="pie-labels-0"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="right"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 1,
            "_y": 35,
            "eventKey": 0,
            "x": "Cats",
            "xName": "Cats",
            "y": 35,
          },
          "endAngle": 2.199114857512855,
          "index": 0,
          "padAngle": 0,
          "startAngle": 0,
          "value": 35,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="Cats"
      textAnchor="start"
      verticalAnchor="middle"
      x={178}
      y={60}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 35,
            "eventKey": 0,
            "x": "Cats",
            "xName": "Cats",
            "y": 35,
          },
          Object {
            "_x": 2,
            "_y": 55,
            "eventKey": 1,
            "x": "Dogs",
            "xName": "Dogs",
            "y": 55,
          },
          Object {
            "_x": 3,
            "_y": 10,
            "eventKey": 2,
            "x": "Birds",
            "xName": "Birds",
            "y": 10,
          },
        ]
      }
      datum={
        Object {
          "_x": 2,
          "_y": 55,
          "eventKey": 1,
          "x": "Dogs",
          "xName": "Dogs",
          "y": 55,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-1"
      index={1}
      key="pie-labels-1"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="left"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 2,
            "_y": 55,
            "eventKey": 1,
            "x": "Dogs",
            "xName": "Dogs",
            "y": 55,
          },
          "endAngle": 5.654866776461628,
          "index": 1,
          "padAngle": 0,
          "startAngle": 2.199114857512855,
          "value": 55,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="Dogs"
      textAnchor="end"
      verticalAnchor="middle"
      x={38}
      y={162}
    />
    <VictoryTooltip
      active={false}
      cornerRadius={0}
      data={
        Array [
          Object {
            "_x": 1,
            "_y": 35,
            "eventKey": 0,
            "x": "Cats",
            "xName": "Cats",
            "y": 35,
          },
          Object {
            "_x": 2,
            "_y": 55,
            "eventKey": 1,
            "x": "Dogs",
            "xName": "Dogs",
            "y": 55,
          },
          Object {
            "_x": 3,
            "_y": 10,
            "eventKey": 2,
            "x": "Birds",
            "xName": "Birds",
            "y": 10,
          },
        ]
      }
      datum={
        Object {
          "_x": 3,
          "_y": 10,
          "eventKey": 2,
          "x": "Birds",
          "xName": "Birds",
          "y": 10,
        }
      }
      events={Object {}}
      flyoutComponent={
        <Flyout
          pathComponent={<Path />}
        />
      }
      groupComponent={<g />}
      id="pie-labels-2"
      index={2}
      key="pie-labels-2"
      labelComponent={
        <VictoryLabel
          capHeight={0.71}
          direction="inherit"
          lineHeight={1}
          textComponent={<Text />}
          tspanComponent={<TSpan />}
        />
      }
      orientation="top"
      renderInPortal={true}
      slice={
        Object {
          "data": Object {
            "_x": 3,
            "_y": 10,
            "eventKey": 2,
            "x": "Birds",
            "xName": "Birds",
            "y": 10,
          },
          "endAngle": 6.283185307179586,
          "index": 2,
          "padAngle": 0,
          "startAngle": 5.654866776461628,
          "value": 10,
        }
      }
      style={
        Object {
          "fill": "#282d33",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "stroke": "transparent",
        }
      }
      text="Birds"
      textAnchor="middle"
      verticalAnchor="end"
      x={73}
      y={16}
    />
  </g>
</VictoryContainer>
`;
